# mcp-pack

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.devcontainer/mcp_client_example/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
examples/laser-core/: README.md  server.py
examples/mcp_langchain_agent/: README.md  ui.py
examples/sciris/: README.md  regression.py  trapezoidal.py
src/mcp_langchain_agent/: app.py  app01.py  task_graph.py  ui01.py
src/mcp_pack/: cli.py  create_db.py  server.py
