[project]
name = "mcp-pack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.6.0",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.1.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "openai>=1.75.0",
    "python-dotenv>=1.1.0"        
]

[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"